--- a/contact-viewer.html
+++ b/contact-viewer.html
@@ -123,29 +123,27 @@
 			<div data-role="content">
 				<div>
 					<p style="display:inline">Name:</p>
-					<input class="contact-name" type="text"  />
+					<input id="edit-name" type="text"  />
 				</div>
 				<div>
 					<p style="display:inline">Title:</p>
-					<input class="contact-title" type="text" />
+					<input id="edit-title" type="text" />
 				</div>
 				<div>
 					<p style="display:inline">Email:</p>
-					<input class="contact-email" type="text" />
+					<input id="edit-email" type="text" />
 				</div>
 				<div>
 					<p style="display:inline">Phone</p>
-					<input class="contact-phone" type="text" />
+					<input id="edit-phone" type="text" />
 				</div>
 				<div>
 					<p style="display:inline">Twitter ID:</p>
-					<input class="contact-twitterid" type="text" />
+					<input id="edit-twitterid" type="text" />
 				</div>
 				<input type="button" id="edit-button" value="Edit">
 			</div>
 		</div>
-
-
 
 	</body>
 </html>
