Added delete in Edit page
Edit page delete functionality. But needs more alignment and refresh of
page stuff still pending

--- a/contact-viewer.html
+++ b/contact-viewer.html
@@ -54,27 +54,27 @@
                 <h1>Contacts Details</h1>
                 <div data-type="horizontal" style="top:5px;position:absolute;float:right;z-index:5;display:inline;" align="right" class="ui-btn-right"> 
                     <a data-role="button" data-icon="Edit" href="#edit-page">Edit</a>
-                    <input type="button" data-icon="delete" id="DeleteContact" value="submit">Delete</a> 
+                    <input type="button" data-icon="delete" id="DeleteContact" value="Delete"></a> 
 		        </div>
 
                 
 			</div>
 			<div data-role="content">
 				<div>
-					<p style="display:inline">Name:</p>
+					<p style="display:inline">Name:    </p>
 					<p class="contact-name" style="display:inline"></p>
 				</div>
 				<div>
-					<p style="display:inline">Title:</p>
+					<p style="display:inline">Title:   </p>
 					<p class="contact-title" style="display:inline"></p>
 				</div>
 				<div>
-					<p style="display:inline">Email:</p>
+					<p style="display:inline">Email:    </p>
 					<p class="contact-email" style="display:inline"></p>
 				</div>
 				<div>
-					<p style="display:inline">Phone</p>
-					<p class="contact-phone" style="display:inline"></p>
+					<p style="display:inline">Phone:    </p>
+					<p class="contact-phone" style="display:inline;font:bold"></p>
 				</div>
 				<div>
 					<p style="display:inline">Twitter ID:</p>
@@ -123,6 +123,7 @@
 					Back
 				</a>
 				<h1>Edit Contact</h1>
+                <input type="button" data-icon="delete" id="DeleteInEdit" value="Delete" style="float:right"></a>
 			</div>
 			<div data-role="content">
 				<div>
@@ -135,6 +136,7 @@
 				</div>
 				<div>
 					<p style="display:inline">Email:</p>
+					<p style="display:inline">Email:</p>
 					<input id="edit-email" type="text" />
 				</div>
 				<div>
@@ -145,7 +147,7 @@
 					<p style="display:inline">Twitter ID:</p>
 					<input id="edit-twitterid" type="text" />
 				</div>
-				<input type="button" id="edit-button" value="Edit">
+				<input type="button" id="edit-button" value="Edit" >
 			</div>
 		</div>
 
